ipc/ipdl/test/ipdl/error/Nullable.ipdl
protocol Nullable {
child:
    Msg(nullable int i);
};
